--- a/index.html
+++ b/index.html
@@ -480,11 +480,12 @@
         <div class="container">
             <div class="contact-card">
                 <div class="contact-content">
-                    <h2 class="h2 section-title">If you like what you see, let's work together.</h2>
-                    <p class="section-text">
-                        I bring rapid solutions to make the life of my clients easier. Have any questions? Reach out to me from this contact form and I will get back to you shortly.
-                    </p>
-                </div>
+    <h2 class="h2 section-title">Intéressé(e) par nos services ? Travaillons ensemble.</h2>
+    <p class="section-text">
+        Nous offrons des solutions sur-mesure pour rendre votre événement inoubliable. Des questions ou besoin d'informations ? Remplissez ce formulaire de contact, et nous reviendrons vers vous rapidement.
+    </p>
+</div>
+
     
                 <form class="contact-form">
                     <div class="input-wrapper">
