--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     - primary meta tags
   -->
   <title>A.N.M Evenementielles</title>
-  <meta name="title" content="A.N.M Evenementielles">
-  <meta name="description" content="A.N.M Evenementielles Website">
+  <meta name="title" content="anm evenementielles">
+  <meta name="description" content="A.N.M Evenementielles est votre partenaire pour des événements mémorables, qu'ils soient professionnels ou privés. ">
+<meta name="keywords" content="anm , anm evenementielles , anm evenementielles , evenementielles ">
+<meta name="robots" content="index, follow">
+
 
   <!-- 
     - favicon
