--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
   <meta name="description" content="A.N.M Evenementielles est votre partenaire pour des événements mémorables, qu'ils soient professionnels ou privés. ">
 <meta name="keywords" content="anm , anm evenementielles , anm evenementielles , evenementielles ">
 <meta name="robots" content="index, follow">
-
+ 
 
   <!-- 
     - favicon
   -->
   <link rel="shortcut icon" href="./assets/images/logo.png" type="image">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="canonical" href="https://anmevenementielles.com/">
 
 
   <!-- 
