--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <script type="text/javascript">
     emailjs.init("HxMl_nIuCHvDi_Ljy"); // Replace "YOUR_USER_ID" with your EmailJS user ID
 </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "A.N.M Evenementielles",
+    "url": "https://www.anmevenementielles.com",
+    "logo": "https://www.anmevenementielles.com/assets/images/logo.png"
+  }
+</script>
+
 
   <!-- 
     - primary meta tags
@@ -24,7 +34,10 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.png" type="image">
+  <link rel="icon" href="./assets/images/logo.png" sizes="32x32" type="image/png">
+<link rel="icon" href="./assets/images/logo.png" sizes="16x16" type="image/png">
+
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="canonical" href="https://anmevenementielles.com/">
 
