--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 
-  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/png">
+  <link rel="shortcut icon" href="https://www.anmevenementielles.com/assets/images/logo.png" type="image/png">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="canonical" href="https://anmevenementielles.com/">
 
