--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script type="text/javascript">
-    emailjs.init("HxMl_nIuCHvDi_Ljy"); // Replace "YOUR_USER_ID" with your EmailJS user ID
+    emailjs.init("9rid3W8tWcrod1KNW"); // Replace "YOUR_USER_ID" with your EmailJS user ID
 </script>
   <script type="application/ld+json">
   {
@@ -122,23 +122,10 @@
 
         <ul class="social-list">
 
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://web.facebook.com/anmconstructions" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://www.instagram.com/anmgroupe/" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
+          <li><a href="https://www.facebook.com/animation.anniversaire.casablanca.0656989026/" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
+          <li><a href="https://www.instagram.com/anm.evenementielles/?igsh=MW9nam9qazhkbnMxZg%3D%3D#" class="social-link"><ion-icon name="logo-instagram"></ion-icon></a></li>
+          <li><a href="https://www.linkedin.com/in/animation-anniversaires-casablanca-0656989026?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+       
 
 
         </ul>
@@ -523,7 +510,7 @@
           event.preventDefault(); // Prevent form from refreshing the page on submit
   
           // Send the form data to EmailJS
-          emailjs.sendForm('service_lhkiq7h', 'template_p2bm4gj', this)
+          emailjs.sendForm('service_er6zfkm', 'template_4f8p6cn', this)
               .then(function(response) {
                   alert('Message sent successfully!');
                   console.log('SUCCESS!', response.status, response.text);
@@ -551,35 +538,49 @@
 
   <footer class="footer">
     <div class="container">
-
-      <p class="copyright">
-        © A.N.M Evenementielles. All rights reserved.
-      </p>
-
-      <ul class="social-list">
-
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-twitter"></ion-icon>
-          </a>
-        </li>
-
-        <li>
-          <a href="https://web.facebook.com/anmconstructions" class="social-link">
-            <ion-icon name="logo-facebook"></ion-icon>
-          </a>
-        </li>
-
-        <li>
-          <a href="https://www.instagram.com/anmgroupe/" class="social-link">
-            <ion-icon name="logo-instagram"></ion-icon>
-          </a>
-        </li>
-
-      </ul>
-
+  
+      <!-- Left Section: Logo -->
+      <div class="footer-left">
+        <div class="logo-container">
+          <img src="./assets/images/logo.png" alt="A.N.M Logo" class="footer-logo">
+        </div>
+      </div>
+  
+      <!-- Center Section: Contact Question -->
+      <div class="footer-center">
+        <p class="footer-question">Suivez nous sur les reseaux sociaux </p>
+        <ul class="footer-icons">
+          <li><a href="https://www.facebook.com/animation.anniversaire.casablanca.0656989026/" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
+          <li><a href="https://www.instagram.com/anm.evenementielles/?igsh=MW9nam9qazhkbnMxZg%3D%3D#" class="social-link"><ion-icon name="logo-instagram"></ion-icon></a></li>
+          <li><a href="https://www.linkedin.com/in/animation-anniversaires-casablanca-0656989026?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+        </ul>
+      </div>
+  
+      <!-- Right Section: Contact Info -->
+      <div class="footer-right">
+        <h4 class="footer-heading">Nous contacter</h4>
+        <p>Email: <a href="mailto:anmevenementielles@gmail.com" class="footer-link">anmevenementielles@gmail.com</a></p>
+        <p>Téléphone: <a href="tel:+212661931080" class="footer-link">+212 661-931080</a></p>
+        <p>Fixe: <a href="tel:+212522359724" class="footer-link">+212 522-359724</a></p>
+        <p>Adresse: 120 BD la grande ceinture Résidence Liliya 2 étage 2 N°11</p>
+      </div>
+  
     </div>
   </footer>
+
+  <div class="footer-container">
+    <p class="copyright">
+      © A.N.M Evenementielles. All rights reserved.
+    </p>
+  </div>
+  
+
+
+    </ul>
+
+  </div>
+  
+  
 
 
 
@@ -595,6 +596,14 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <a href="https://wa.me/+212661931080" 
+  id="whatsapp-button" 
+  target="_blank" 
+  title="Chat with us on WhatsApp">
+ <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      alt="WhatsApp" 
+      style="width: 30px; height: 30px;">
+</a>
 
 </body>
 
