--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.png" width="75" height="75" alt="ANM Evenementielles">
+         <img src="https://www.anmevenementielles.com/assets/images/logo.png" alt="A.N.M Evenementielles Logo" width="75" height="75" />
       </a>
 
       <nav class="navbar" data-navbar>
