--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script type="text/javascript">
-    emailjs.init("9rid3W8tWcrod1KNW"); // Replace "YOUR_USER_ID" with your EmailJS user ID
+    emailjs.init("glWo2mtp1wgPvtekg"); // Replace "YOUR_USER_ID" with your EmailJS user ID
 </script>
   <script type="application/ld+json">
   {
@@ -503,7 +503,7 @@
           event.preventDefault(); // Prevent form from refreshing the page on submit
   
           // Send the form data to EmailJS
-          emailjs.sendForm('service_er6zfkm', 'template_4f8p6cn', this)
+          emailjs.sendForm('service_qdn9506', 'template_tr3mxch', this)
               .then(function(response) {
                   alert('Message sent successfully!');
                   console.log('SUCCESS!', response.status, response.text);
