--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
       <!-- Right Section: Contact Info -->
       <div class="footer-right">
         <h4 class="footer-heading">Nous contacter</h4>
-        <p>Email: <a href="mailto:anm@anmevenementielles.com" class="footer-link">anm@anmevenementielles.com</a></p>
+        <p>Email: <a href="mailto:anm.animations2014@gmail.com" class="footer-link">anm.animations2014@gmail.com</a></p>
         <p>Téléphone: <a href="tel:+212661931080" class="footer-link">+212 661-931080</a></p>
         <p>Fixe: <a href="tel:+212522359724" class="footer-link">+212 522-359724</a></p>
         <p>Adresse: 120 BD la grande ceinture Résidence Liliya 2 étage 2 N°11</p>
