--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
   <link rel="shortcut icon" href="https://www.anmevenementielles.com/assets/images/logo.png" type="image/png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<link rel="canonical" href="https://anmevenementielles.com/">
+<link rel="canonical" href="https://www.anmevenementielles.com/">
+
 
 
   <!-- 
