--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
   <!-- 
     - favicon
   -->
+  <link rel="alternate" hreflang="ar-MA" href="https://www.anmevenementielles.com/" />
+  <link rel="alternate" hreflang="fr-MA" href="https://www.anmevenementielles.com/" />
+<link rel="alternate" hreflang="en-MA" href="https://www.anmevenementielles.com/" />
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -51,7 +55,8 @@
   <link rel="shortcut icon" href="https://www.anmevenementielles.com/assets/images/logo.png" type="image/png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<link rel="canonical" href="https://www.anmevenementielles.com/">
+<link rel="canonical" href="https://www.anmevenementielles.com/" />
+
 
 
 
