--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     - primary meta tags
   -->
   <title>A.N.M Evenementielles</title>
-  <meta name="title" content="anm evenementielles">
-  <meta name="description" content="A.N.M Evenementielles est votre partenaire pour des événements mémorables, qu'ils soient professionnels ou privés. ">
-<meta name="keywords" content="anm , anm evenementielles , anm evenementielles , evenementielles ">
+  <meta name="title" content="A.N.M Événementielles - Organisation d'Événements Mémorables au Maroc">
+  <meta name="description" content="A.N.M Événementielles propose des services d'organisation pour des événements professionnels, mariages, et célébrations privées au Maroc." ">
+<meta name="keywords" content="anm , anm evenementielles , anm evenementielles , ANM Événementielles, organisation d'événements, événements professionnels, mariages, célébrations privées, Maroc ">
 <meta name="robots" content="index, follow">
  
 
